Count U+000C as a whitespace character for separating class attributes.  (Bug 437915)  r=bzbarsky  sr=sicking